# yuanbao_agent

./: .gitignore
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
runtime/: pyproject.toml
runtime/src/local_agent_runtime/: __init__.py  event_bus.py  main.py  models.py
runtime/src/local_agent_runtime/context/: __init__.py  builder.py  token_budget.py
runtime/src/local_agent_runtime/orchestrator/: __init__.py  service.py
runtime/src/local_agent_runtime/planner/: __init__.py  service.py
runtime/src/local_agent_runtime/policy/: __init__.py  guard.py
runtime/src/local_agent_runtime/provider/: adapter.py  openai_compatible.py
runtime/src/local_agent_runtime/rpc/: __init__.py  server.py
runtime/src/local_agent_runtime/services/: __init__.py  collaboration_service.py  command_background.py  command_execution.py  schedule_service.py  (+9 more)
runtime/tests/: conftest.py  test_child_worker_event_bridge.py  test_collaboration_events.py  test_collaboration_runtime.py  test_collaboration_worker_health.py  test_context_builder.py  test_e2e_smoke.py  test_orchestrator_react_loop.py  test_provider_adapter.py  test_provider_streaming.py  test_run_command_background.py  test_run_command_policy.py  test_runtime_flows.py  test_schedule_runtime.py  test_task_run_model.py  test_tool_schemas_trace.py  test_worker_approval_handoff.py  test_worker_budget.py  test_worker_environment.py  test_worker_policy.py  test_worker_process_runtime.py  test_worker_process_transport.py  test_worker_runner.py
(+172 files in other folders)
