[project]
name = "local-agent-runtime"
version = "0.1.0"
description = "Python sidecar skeleton for the local desktop AI coding agent MVP."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
