[package]
name = "local-agent-shell"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
once_cell = "1.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[lib]
name = "local_agent_shell"
crate-type = ["staticlib", "cdylib", "rlib"]
